--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,12 +46,13 @@ jobs:
 
       - name: ssh and unpack
         uses: appleboy/ssh-action@v1.2.0
-        host: ${{ secrets.SSH_HOSTNAME }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script: |
-          set -e
-          cd '${{ secrets.WORKING_DIRECTORY }}'
-          tar -xzvf build.tar
-          # depending on the instance input we want to do different stuff here
+        with:
+          host: ${{ secrets.SSH_HOSTNAME }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            set -e
+            cd '${{ secrets.WORKING_DIRECTORY }}'
+            tar -xzvf build.tar
+            # depending on the instance input we want to do different stuff here
