--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,15 +34,15 @@ jobs:
           cp -TR . ../build
           tar -cvf build.tar ../build/
 
-      - name: copy build
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOSTNAME }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "build.tar"
-          target: "${{ secrets.WORKING_DIRECTORY }}"
+      - name: Set up SCP
+        run: |
+          mkdir -v -m 700 $HOME/.ssh
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} > $HOME/.ssh/known_hosts
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
+          chmod 400 $HOME/.ssh/id_rsa
+
+      - name: Copy to server
+        run: scp build.tar ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOSTNAME }}:${{ secrets.WORKING_DIRECTORY }}
 
       - name: ssh and unpack
         uses: appleboy/ssh-action@v1.2.0
