--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Set up SCP
         run: |
-          mkdir -v -m 700 $HOME/.ssh
+          mkdir -v -p -m 700 $HOME/.ssh
           ssh-keyscan -H ${{ secrets.SSH_HOST }} > $HOME/.ssh/known_hosts
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
           chmod 400 $HOME/.ssh/id_rsa
