--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           tar -cvf build.tar ../build/
 
       - name: Copy to server
-        run: scp -P 3003 build.tar ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOSTNAME }}:${{ secrets.WORKING_DIRECTORY }}
+        run: scp -P 3003 build.tar ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOSTNAME }}:build.tar
 
       - name: ssh and unpack
         uses: appleboy/ssh-action@v1.2.0
