--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,6 @@ jobs:
           key: ${{ secrets.MCA_SSH_PRIVATE_KEY }}
           port: ${{ secrets.MCA_SSH_PORT }}
           script: |
-            echo "${{ secrets.MCA_WORKING_DIRECTORY }}"
             set -e
             cd '${{ secrets.MCA_WORKING_DIRECTORY}}'
             # if we already have an unpacked build we want to get rid of it
@@ -76,4 +75,5 @@ jobs:
             esac
 
             # execute the command
-            eval "$command"
+            # eval "$command"
+            echo "$command"
