Eval instead of echo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,5 +75,4 @@ jobs:
             esac
 
             # execute the command
-            # eval "$command"
-            echo "$command"
+            eval "$command"
