--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,4 +78,5 @@ jobs:
             esac
 
             # execute the command
-            eval "$command"
+            # eval "$command"
+            echo "$command"
