--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -28,7 +28,7 @@ jobs:
           tar -cvf build.tar ../build/
 
       - name: Copy to server
-        run: scp -P 3003 build.tar ${{ secrets.MCA_SSH_USERNAME }}@${{ secrets.MCA_SSH_HOSTNAME }}:${{ secrets.MCA_WORKING_DIRECTORY }}/Core/public
+        run: scp -P 3003 build.tar ${{ secrets.MCA_SSH_USERNAME }}@${{ secrets.MCA_SSH_HOSTNAME }}:${{ secrets.MCA_WORKING_DIRECTORY }}/build/public
 
       - name: ssh and unpack
         uses: appleboy/ssh-action@v1.2.0
