--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: [self-hosted, linux, x64, homestead]
+    runs-on: [self-hosted, linux, x64]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,7 +30,6 @@ jobs:
 
       - name: build mercury
         run: |
-          rm -rf ../build
           tar -cvf build.tar ./*
 
       - name: Copy to server
