--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,11 @@
-# This is a basic workflow to help you get started with Actions
-
 name: MCA Deployment
 
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      instance:
+      INSTANCE:
         type: choice
-        description: Which instances would you like to deploy to
+        description: Which INSTANCEs would you like to deploy to
         options:
           - Beta
           - Production
@@ -17,63 +13,73 @@ on:
           - Test
           - All
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: [self-hosted, linux, ARM64]
+    concurrency:
+      group: mca-deployment
+    runs-on: [self-hosted, Linux, cd]
+    environment: "Production MCA"
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
 
-      - name: build mercury
-        run: |
-          tar -cvf build.tar ./*
+      - name: build
+        run: composer install; yarn && yarn build;
 
       - name: Copy to server
-        run: scp -P ${{ secrets.MCA_SSH_PORT }} build.tar ${{ secrets.MCA_SSH_USERNAME }}@${{ secrets.MCA_SSH_HOSTNAME }}:${{ secrets.MCA_WORKING_DIRECTORY }}
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOSTNAME }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "./*"
+          target: "${{ secrets.WORKING_DIRECTORY }}/Core"
 
       - name: ssh and unpack
         uses: appleboy/ssh-action@v1.2.0
         with:
-          host: ${{ secrets.MCA_SSH_HOSTNAME }}
-          username: ${{ secrets.MCA_SSH_USERNAME }}
-          key: ${{ secrets.MCA_SSH_PRIVATE_KEY }}
-          port: ${{ secrets.MCA_SSH_PORT }}
+          host: ${{ secrets.SSH_HOSTNAME }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
           script: |
             set -e
-            cd '${{ secrets.MCA_WORKING_DIRECTORY}}'
-            # if we already have an unpacked build we want to get rid of it
-            # perhaps we should be mv ./build ./build_old instead
-            if [ -d ./build ]; then rm -rf '${{ secrets.MCA_WORKING_DIRECTORY }}/build'; fi
-            # unpack build
-            tar xvf build.tar
-            # depending on the instance input we want to do different stuff here
-            command="/root/create_or_update_mca_instance.php -m update"
-            instance="${{ github.event.inputs.instance }}"
-            production_users="$(getent group production | awk -F ':' '{print $4}')"
-            test_users="$(getent group test | awk -F ':' '{print $4}')"
+            cd '${{ secrets.WORKING_DIRECTORY}}'
 
-            case "$instance" in
-              # if instance = all we dont' need to filter
+            # if we already have an unpacked build we want to get rid of it
+            # perhaps we should be mv ./Core ./Core_old instead
+            if [ -d ./Core ]; then rm -rf '${{ secrets.WORKING_DIRECTORY }}/Core'; fi
+
+            # unpack build
+            tar xvf Core.tar
+
+            # depending on the INSTANCE input we want to do different stuff here
+            COMMAND="/root/create_or_update_mca_INSTANCE.php -m update"
+            INSTANCE="${{ github.event.inputs.INSTANCE }}"
+
+            # get users from their groups
+            PRODUCTION_USERS="$(getent group production | awk -F ':' '{print $4}')"
+            TEST_USERS="$(getent group test | awk -F ':' '{print $4}')"
+            NO_UPDATE="$(getent group no-update | awk -F ':' '{print $4}')"
+
+            case "${INSTANCE}" in
+              # if INSTANCE = all we dont' need to filter
               "All")
                 ;;
-              # if instance = production -u prod_users
+              # if INSTANCE = production -u prod_users
               "Production")
-                command="$command -u $production_users";;
-              # if instance = beta -e prod_users
+                COMMAND="${COMMAND} -u ${PRODUCTION_USERS}";;
+              # if INSTANCE = beta -e prod_users
               "Beta")
-                command="$command -e $production_users";;
-              # if instance = seychelles -u seychelles
+                COMMAND="${COMMAND} -e ${PRODUCTION_USERS},${TEST_USERS},${NO_UPDATE}";;
+              # if INSTANCE = seychelles -u seychelles
               "Seychelles")
-                command="$command -u scmercurybilling";;
-              # if instance = test -u dveale,demomercury,agoodlet
+                COMMAND="${COMMAND} -u scmercurybilling";;
+              # if INSTANCE = test -u dveale,demomercury,agoodlet
               "Test")
-                command="$command -u $test_users";;
+                COMMAND="${COMMAND} -u ${TEST_USERS}";;
             esac
 
-            # execute the command
-            # eval "$command"
-            echo "$command"
+            # execute the COMMAND
+            eval "${COMMAND}"
