--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     concurrency:
       group: mca-deployment
     runs-on: [self-hosted, Linux, cd]
-    environment: "Production MCA"
+    # environment: "Production MCA"
 
     steps:
       - uses: actions/checkout@v2
